# csad2526ki402kunitskiyvladyslav11

./: 1_logs.txt  2_logs.txt  3_logs.txt  4_logs.txt  CMakeLists.txt  README.md  ci.bat  main.cpp  math_operations.cpp  math_operations.h
.github/workflows/: ci.yml
tests/: unit_tests.cpp
